--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ justify-content: space-around;
   font-size: xx-large;
   color:#5e5d5c;
   margin-bottom: 40px;
+  
 }
 .f-button{
   background-color: #E5E9EA;
@@ -71,6 +72,7 @@ justify-content: space-around;
   margin-top: 10px;
   margin: auto;
   align-items: center;
+  padding-top: 10px;
 }
 
 
